# DataLens

./: README.md
.github/workflows/: core.yml
Core/: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
Core/bench/: CMakeLists.txt  baseline_phase0.csv  bench_phase0.cpp
Core/cmake/: x86_64-w64-mingw32.cmake
Core/include/datalens/: AlignedAllocator.h  DataLens.h  DataLensSchema.h  DataStore.h  DataView.h  Ir.h  Lens.h  ThreadPool.h  View.h  c_api.h  log.h
Core/src/: DataLens.cpp  DataLensSchema.cpp  DataStore.cpp  DataView.cpp  Ir.cpp  ThreadPool.cpp  View.cpp  c_api.cpp  log.cpp
Core/tests/: CMakeLists.txt  TestTags.h  test_argmax.cpp  test_c_api.cpp  test_curve.cpp  test_datastore.cpp  test_dataview.cpp  test_ir.cpp  test_lens.cpp  test_noise.cpp  test_schedule.cpp  test_schema.cpp  test_system.cpp  test_view.cpp
Test Results/: Phase0_20251113133922.csv  Phase0_20251113141842.csv  Phase3_20260618191725.md
UE/DataLensPlugin/: .clangd  .ignore  DataLensPlugin.code-workspace  DataLensPlugin.uproject  Makefile  compile_commands.json
UE/DataLensPlugin/Config/: DefaultEngine.ini  DefaultGame.ini
UE/DataLensPlugin/Content/Core/: TestGameMode.uasset
UE/DataLensPlugin/Content/Levels/: EmptyLevel.umap
UE/DataLensPlugin/Content/UI/: TestHUD.uasset  WB_TestControls.uasset
UE/DataLensPlugin/Plugins/DataLens/: DataLens.uplugin
UE/DataLensPlugin/Plugins/DataLens/Source/DataLens/: DataLens.Build.cs
UE/DataLensPlugin/Plugins/DataLens/Source/DataLens/Private/: DataLens.cpp  DataLensBPLibrary.cpp  DataLensModule.cpp  DataLensSchema.cpp  DataLensSubsystem.cpp  DataStore.cpp
UE/DataLensPlugin/Plugins/DataLens/Source/DataLens/Public/: DataLens.h  DataLensBPLibrary.h  DataLensModule.h  DataLensSchema.h  DataLensSubsystem.h  DataStore.h
UE/DataLensPlugin/Source/: DataLensPlugin.Target.cs  DataLensPluginEditor.Target.cs
UE/DataLensPlugin/Source/DataLensPlugin/: DataLensPlugin.Build.cs  DataLensPlugin.cpp
